--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,7 +40,8 @@
         {% if site.github.is_project_page %}
           <span class="site-footer-owner"><a href="{{ site.github.repository_url }}">{{ site.github.repository_name }}</a> is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a>.</span>
         {% endif %}
-        <span class="site-footer-credits">2020 CopyRight 版权所有<a href="https://vpsda.github.io">便宜国外VPS推荐</a>.</span>
+        <span class="site-footer-credits"> 网站通道一<a href="https://vpsda.github.io">点击进</a>.</span>
+         <span class="site-footer-credits">  网站通道二<a href="https://vpsda.github.io">点击进</a>.</span>
       </footer>
     </main>
 </body>
